--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,6 +27,7 @@
                     <li><a href="#"> Men</a></li>
                     <li><a href="#"> Women</a></li>
                     <li><a href="#"> Kids</a></li>
+                    <li><a href="#"> contact us</a></li>
                 </ul>
             </li>
             <li><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></li>
