--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav>
-        <a href="#" style="font-size: 24px;"><b>Aarambam</b></a>
+        <a href="#" style="font-size: 24px;"><b>Aarambam.in</b></a>
         <div class="search-bar">
             <input type="text" class="search-input" placeholder="Search...">
             <!-- Camera icon for search -->
