--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <h2 class="suggestions-title">Suggestions</h2>
       <div class="slider-wrapper">
         <button id="prev-slide" class="slide-button material-symbols-rounded">
           chevron_left
