--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,79 @@
 <footer class="text-center text-white" style="background-color: #f1f1f1;">
     <div class="container pt-4">
+      
+
+      <div class="row">
+        <div class="col-12 col-md-12 col-lg-6 mb-3">
+            <div class="row">
+                <div class="col-12 col-sm-4">
+                  <h6 class="heading">Clothing</h6>
+                    <ul class="nav flex-column nav-opacity nav-gap-sm">
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/MEN">MEN</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/WOMEN">WOMEN</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/KIDS">KIDS</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-4">
+                  <h6 class="heading">companys</h6>
+                    <ul class="nav flex-column nav-opacity nav-gap-sm">
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/service/Amazon">Amazon</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/service/Flipkart">Flipkart</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/service/myntra">myntra</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/product/Ajio">Ajio</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <ul class="nav flex-column nav-opacity nav-gap-sm">
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/contact-us">Contact Us</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/service/data-science">*****</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/product/dataops">*****</a>
+                        </li>
+                        <li class="nav-item mb-1">
+                            <a class="fw-light small text-body text-decoration-none" routerLink="/product/learning-management-system">*****</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-12 offset-lg-1 col-lg-5">
+            <div class="row">
+                <div class="col-12 col-sm-4 col-md-4 col-lg-6 mb-3">
+                    <h6 class="heading">Call Us On</h6>
+                    <a class="fw-light small text-body text-decoration-none" 
+                        href="**********">**********</a>
+                </div>
+                <div class="col-12 offset-sm-4 col-sm-4 offset-md-4 col-md-4 offset-lg-0 col-lg-6 mb-3">
+                    <h6 class="heading">E-Mail Us</h6>
+                    <a class="fw-light small text-body text-decoration-none" 
+                        href="mailto:aarambam.in@gmail.com">aarambam.in@gmail.com</a>
+                </div>
+            </div>
+
+            
+            </div>
+            
+        </div>
+    </div>
+<div>
       <section class="mb-4">
         <a
           mdbRipple
@@ -33,6 +107,10 @@
           role="button"
           ><i class="fab fa-linkedin"></i
         ></a>
+        <p class="footer-copyright">
+          Copyright © 2024 Aarambam. All Rights Reserved.
+      </p>
+
       </section>
     </div>
   </footer>
