--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -65,6 +65,9 @@
                     <h6 class="heading">E-Mail Us</h6>
                     <a class="fw-light small text-body text-decoration-none" 
                         href="mailto:aarambam.in@gmail.com">aarambam.in@gmail.com</a>
+                        <br>
+                        <br>
+                        <button class="button">JOIN NOW</button>
                 </div>
             </div>
 
