app rought modules content added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         /* Style for carousel images */
         .carousel-inner img {
             width: 100%; /* Set the width to 100% of the parent container */
-            height: auto; /* Maintain aspect ratio */
+            height: 50%; /* Maintain aspect ratio */
         }
     </style>
 </head>
