--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
     <body>
         <div class="wrapper">
             <form action="">
-                <h1>Login</h1>te
+                <h1>Login</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Username" required> 
                     <i class='bx bxs-user'></i>
