--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -69,8 +69,8 @@
 
   img {
     padding-top: 10px;
-    width: 100%;
-    height: 400px; /* Adjust the height as needed */
+    width: 50%;
+    height: 50%; /* Adjust the height as needed */
     object-fit: cover;
 }
 
@@ -120,7 +120,7 @@
     display: block;
 }
 .carousel-inner img {
-  width: 100%; /* Set the width to 100% of the parent container */
-  height: 40%; /* Maintain aspect ratio */
+  width: 50px; /* Set the width to 100% of the parent container */
+  height: 25px; /* Maintain aspect ratio */
   overflow: hidden;
 }
