--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,7 @@
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="remember-forget">
-                    <label><input type="checkbox">remember me</label>
+                    <label><input type="checkbox">Remember Me</label>
                     <a href="#">Forget Password? </a>
                 </div>
                 <button type="submit" class="btn">Login</button>
