nav bar code changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<!-- <app-topnavbar></app-topnavbar> -->
+<app-topnavbar></app-topnavbar>
 <app-navbar></app-navbar>
 <app-suggestions></app-suggestions>
 <app-footer></app-footer>
