--- a/src/app/topnavbar/topnavbar.component.html
+++ b/src/app/topnavbar/topnavbar.component.html
@@ -7,13 +7,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-<nav id="main-navbar">
-    <ul>
-      <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-    </ul>
+  <nav>
+    <a href="#" style="font-size: 24px;"><b>Aarambam.in</b></a>
+    <div class="search-bar">
+        <input type="text" class="search-input" placeholder="Search...">
+        <!-- Camera icon for search -->
+        <button class="search-button"><i class="fas fa-camera"></i></button>
+        <!-- Voice assistant icon for search -->
+        <button class="microphone"><i class="fas fa-microphone"></i></button>
+    </div>
+    <ul class="list">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle">
+                <i class="fas fa-bars"></i> <!-- Icon for the dropdown toggle -->
+                Products
+            </a>
+            <ul class="dropdown-menu">
+                <li><a href="#"> Men</a></li>
+                <li><a href="#"> Women</a></li>
+                <li><a href="#"> Kids</a></li>
+                <li><a href="#"> contact us</a></li>
+            </ul>
+        </li>
+        <li><a href="#"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+        <li><a href="#"><i class="fas fa-envelope"></i> Contact us</a></li>
+        <li><a href="#"><i class="fas fa-user"></i> Profile</a></li>
+    </ul>       
 </nav>
 </body>
 </html>
