--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,14 +15,6 @@
                     <i class='bx bxs-user'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
-                    <i class='bx bxs-lock-alt'></i>
-                </div>
-                <div class="input-box">
-                    <input type="conform password" placeholder="Conform Password" required>
-                    <i class='bx bxs-lock-alt'></i>
-                </div>
-                <div class="input-box">
                     <input type="Email" placeholder="Email" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
@@ -30,10 +22,18 @@
                     <input type="Phone number" placeholder="Phone number" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
-                <div class="remember-forget">
-                    <label><input type="checkbox">Remember Me</label>
-                    <!-- <a href="#">Forget Password? </a> -->
+                <div class="input-box">
+                    <input type="password" placeholder="Password" required>
+                    <i class='bx bxs-lock-alt'></i>
                 </div>
+                <div class="input-box">
+                    <input type="conform password" placeholder="Conform Password" required>
+                    <i class='bx bxs-lock-alt'></i>
+                </div>
+                <!-- <div class="remember-forget">
+                    <label><input type="checkbox">Remember Me</label>
+                    <a href="#">Forget Password? </a>
+                </div> -->
                 <button type="submit" class="btn">Register</button>
                 <div class="register-link">
                     <p>have an account? <a href="#">Login</a></p>
