register some changes

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('http://thewowstyle.com/wp-content/uploads/2015/01/nature-images.jpg');
+    background-image: url('https://img.freepik.com/free-photo/abstract-dark-blue-futuristic-digital-grid-background_53876-104051.jpg?t=st=1717092886~exp=1717096486~hmac=4db987c51ce59cbb5b00c1ce9834354cd7743e9ebc5c806044075bb10641df02&w=1060');
     /* background-color: #DAFFFE; */
     background-size: cover;
     background-position: center;
