register some changes

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,6 +19,7 @@
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="remember-forget">
+                    <input type="checkbox" onclick="">Show Password
                     <label><input type="checkbox">Remember Me</label>
                     <a href="#">Forget Password? </a>
                 </div>
