register some changes in spelling mistakes

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -19,7 +19,7 @@
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="input-box">
-                    <input type="Phone number" placeholder="Phone number" required>
+                    <input type="Phone number" placeholder="Phone Number" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
                 <div class="input-box">
