in register page remember pasword has removed

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -30,10 +30,10 @@
                     <input type="conform password" placeholder="Conform Password" required>
                     <i class='bx bxs-lock-alt'></i>
                 </div>
-               <div class="remember-forget">
+               <!-- <div class="remember-forget">
                     <label><input type="checkbox">Remember Me</label>
                     <a href="#">Forget Password? </a>
-                </div> 
+                </div>  -->
                 <button type="submit" class="btn">Register</button>
                 <div class="register-link">
                     <p>have an account? <a href="#">Login</a></p>
